Changed indistinct future relevant skills inside index.html

--- a/index.html
+++ b/index.html
@@ -153,10 +153,9 @@
                     </div>
 
                     <ul>
-                        <li><p>Lead and manage soccer coaching sessions for children aged 6-15.</p></li>
-                        <li><p>Adapt coaching techniques to cater to the varying skill levels and needs of each age group.</p></li>
-                        <li><p>Create a positive and inclusive environment where children can develop both soccer skills and life skills.</p></li>
-                        <li><p>Develop age-appropriate training drills and exercises to enhance fundamental skills such as dribbling, passing, shooting, and ball control.</p></li>
+                        <li><p>Create and Design t-shirt graphics for printing.</p></li>
+                        <li><p>Apply emulsion to and burn screens for screen printing.</p></li>
+                        <li><p>Create cool and accessible websites for brand.</p></li>
                     </ul>
                 </div>
 
